--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.appointment.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.appointment.yml
@@ -1,24 +1,31 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.Appointment:interface'
-    summary: |-
-      处理约会的[项](xref:outlook!Office.Item:interface)的子类。
+### YamlMime:TSType
+name: Office.Appointment
+uid: outlook!Office.Appointment:interface
+package: outlook!
+fullName: Office.Appointment
+summary: >-
+  处理约会的 [项](xref:outlook!Office.Item:interface) 的子类。
 
-      **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式`Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.8/office.context.mailbox.item)页。
 
-      子接口：
+  **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式 `Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅 [对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.8/office.context.mailbox.item) 页。
 
-      - [AppointmentCompose](xref:outlook!Office.AppointmentCompose:interface)
 
-      - [AppointmentRead](xref:outlook!Office.AppointmentRead:interface)
-    name: Office.Appointment
-    fullName: Office.Appointment
-    langs:
-      - typeScript
-    type: interface
-    extends:
-      - 'outlook!Office.Item:interface'
-    package: outlook!
-references:
-  - uid: 'outlook!Office.Item:interface'
-    name: Item
+  子接口：
+
+
+  - [AppointmentCompose](xref:outlook!Office.AppointmentCompose:interface)
+
+
+  - [AppointmentRead](xref:outlook!Office.AppointmentRead:interface)
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+extends: <xref uid="outlook!Office.Item:interface" />
+metadata:
+  ms.openlocfilehash: 4ef1d079c27d8e79003eb824d1ed72a611740026
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49340167"
