--- a/docs/docs-ref-autogen/outlook_1_6/outlook/office.emailuser.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/outlook/office.emailuser.yml
@@ -1,41 +1,46 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.EmailUser:interface'
-    summary: 表示 Exchange Server 上的电子邮件帐户。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+### YamlMime:TSType
+name: Office.EmailUser
+uid: outlook!Office.EmailUser:interface
+package: outlook!
+fullName: Office.EmailUser
+summary: 表示 Exchange Server 上的电子邮件帐户。
+remarks: >-
+  **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：读取
-    name: Office.EmailUser
-    fullName: Office.EmailUser
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.EmailUser#displayName:member'
-      - 'outlook!Office.EmailUser#emailAddress:member'
-  - uid: 'outlook!Office.EmailUser#displayName:member'
-    summary: 获取与电子邮件地址关联的显示名称。
-    name: displayName
-    fullName: displayName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'displayName: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.EmailUser#emailAddress:member'
-    summary: 获取 SMTP 电子邮件地址。
-    name: emailAddress
-    fullName: emailAddress
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'emailAddress: string;'
-      return:
-        type:
-          - string
+
+  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：读取
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: displayName
+  uid: outlook!Office.EmailUser#displayName:member
+  package: outlook!
+  fullName: displayName
+  summary: 获取与电子邮件地址关联的显示名称。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'displayName: string;'
+    return:
+      type: string
+- name: emailAddress
+  uid: outlook!Office.EmailUser#emailAddress:member
+  package: outlook!
+  fullName: emailAddress
+  summary: 获取 SMTP 电子邮件地址。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'emailAddress: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 9f0394eddac595a80ddf7e6b9591356d3cab0c9c
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49340391"
