--- a/docs/docs-ref-autogen/outlook_1_6/outlook/office.itemread.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/outlook/office.itemread.yml
@@ -1,24 +1,31 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.ItemRead:interface'
-    summary: |-
-      Office 的读取模式： "邮箱"。[项目](xref:outlook!Office.Item:interface)<!-- -->.
+### YamlMime:TSType
+name: Office.ItemRead
+uid: outlook!Office.ItemRead:interface
+package: outlook!
+fullName: Office.ItemRead
+summary: >-
+  Office 的读取模式： "邮箱"。 [项目](xref:outlook!Office.Item:interface)<!-- -->.
 
-      **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式`Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅[对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.6/office.context.mailbox.item)页。
 
-      子接口：
+  **重要说明**：这是一个内部 Outlook 对象，而不是直接通过现有接口公开。 应将此视为的模式 `Office.context.mailbox.item`<!-- -->. 有关详细信息，请参阅 [对象模型](https://docs.microsoft.com/office/dev/add-ins/reference/objectmodel/requirement-set-1.6/office.context.mailbox.item) 页。
 
-      - [AppointmentRead](xref:outlook!Office.AppointmentRead:interface)
 
-      - [Messageread.html](xref:outlook!Office.MessageRead:interface)
-    name: Office.ItemRead
-    fullName: Office.ItemRead
-    langs:
-      - typeScript
-    type: interface
-    extends:
-      - 'outlook!Office.Item:interface'
-    package: outlook!
-references:
-  - uid: 'outlook!Office.Item:interface'
-    name: Item
+  子接口：
+
+
+  - [AppointmentRead](xref:outlook!Office.AppointmentRead:interface)
+
+
+  - [MessageRead](xref:outlook!Office.MessageRead:interface)
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+extends: <xref uid="outlook!Office.Item:interface" />
+metadata:
+  ms.openlocfilehash: 9f3c4f4510045a627b66350a217401d293a0305f
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49340335"
