--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.recurrencechangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.recurrencechangedeventargs.yml
@@ -1,49 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.RecurrenceChangedEventArgs:interface'
-    summary: |-
-      提供引发事件的更新的定期对象 `Office.EventType.RecurrenceChanged` 。
+### YamlMime:TSType
+name: Office.RecurrenceChangedEventArgs
+uid: outlook!Office.RecurrenceChangedEventArgs:interface
+package: outlook!
+fullName: Office.RecurrenceChangedEventArgs
+summary: >-
+  提供引发事件的更新的定期对象 `Office.EventType.RecurrenceChanged` 。
 
-      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    name: Office.RecurrenceChangedEventArgs
-    fullName: Office.RecurrenceChangedEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.RecurrenceChangedEventArgs#recurrence:member'
-      - 'outlook!Office.RecurrenceChangedEventArgs#type:member'
-  - uid: 'outlook!Office.RecurrenceChangedEventArgs#recurrence:member'
-    summary: |-
-      获取更新后的定期对象。
 
-      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    name: recurrence
-    fullName: recurrence
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'recurrence: Recurrence;'
-      return:
-        type:
-          - 'outlook!Office.Recurrence:interface'
-  - uid: 'outlook!Office.RecurrenceChangedEventArgs#type:member'
-    summary: |-
-      获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
+  \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: recurrence
+  uid: outlook!Office.RecurrenceChangedEventArgs#recurrence:member
+  package: outlook!
+  fullName: recurrence
+  summary: >-
+    获取更新后的定期对象。
 
-      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type: "olkRecurrenceChanged";'
-      return:
-        type:
-          - '"olkRecurrenceChanged"'
-references:
-  - uid: 'outlook!Office.Recurrence:interface'
-    name: Recurrence
+
+    \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'recurrence: Recurrence;'
+    return:
+      type: <xref uid="outlook!Office.Recurrence:interface" />
+- name: type
+  uid: outlook!Office.RecurrenceChangedEventArgs#type:member
+  package: outlook!
+  fullName: type
+  summary: >-
+    获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
+
+
+    \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type: "olkRecurrenceChanged";'
+    return:
+      type: "\"olkRecurrenceChanged\""
+metadata:
+  ms.openlocfilehash: 74dd1edaf796c96c92f86641e866debe7c192c34
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49340160"
