--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.entities.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.entities.yml
@@ -1,210 +1,132 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.Entities:interface'
-    summary: |-
-      表示电子邮件或约会中找到的实体集合。仅限阅读模式。
-
-      `Entities` 对象是项目（电子邮件或约会）包含一个或多个服务器找到的实体时由 `getEntities` 和 `getEntitiesByType` 方法返回的实体数组的容器。可以使用代码中的这些实体为查看器提供附加上下文信息，如对项目中找到的地址的映射或打开项目中找到的电话号码的拨号程序。
-
-      如果项中不存在属性中指定类型的任何实体，则与该实体关联的属性为 null。 例如，如果邮件包含街道地址和电话号码，则 addresses 属性和 phoneNumbers 属性将包含信息，其他属性将为 null。
-
-      若要被识别为地址，字符串必须包含至少具有街道编号、街道名称、城市、州和邮政编码等元素的子集的美国通讯地址。
-
-      若要被识别为电话号码，字符串必须包含北美电话号码格式。
-
-      实体识别有赖于基于计算机了解大量数据的自然语言识别。实体的识别是不确定的，其成功有时取决于项中的特定上下文。
-
-      当方法返回属性数组时 `getEntitiesByType` ，仅指定实体的属性包含数据; 其他所有属性均为 null。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
-
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：读取
-    name: Office.Entities
-    fullName: Office.Entities
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.Entities#addresses:member'
-      - 'outlook!Office.Entities#contacts:member'
-      - 'outlook!Office.Entities#emailAddresses:member'
-      - 'outlook!Office.Entities#meetingSuggestions:member'
-      - 'outlook!Office.Entities#phoneNumbers:member'
-      - 'outlook!Office.Entities#taskSuggestions:member'
-      - 'outlook!Office.Entities#urls:member'
-  - uid: 'outlook!Office.Entities#addresses:member'
-    summary: 获取在电子邮件或约会中找到的物理地址（街道或邮寄地址）。
-    name: addresses
-    fullName: addresses
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'addresses: string[];'
-      return:
-        type:
-          - 'string[]'
-        description: |-
+### YamlMime:TSType
+name: Office.Entities
+uid: outlook!Office.Entities:interface
+package: outlook!
+fullName: Office.Entities
+summary: >-
+  表示电子邮件或约会中找到的实体集合。仅限阅读模式。
 
 
-          #### <a name="examples"></a>示例
-
-          ```javascript
-          var item = Office.context.mailbox.item;
-          var addresses = item.getEntitiesByType(Office.MailboxEnums.EntityType.Address);
-          ```
-  - uid: 'outlook!Office.Entities#contacts:member'
-    summary: 获取电子邮件地址或约会中找到的联系人。
-    name: contacts
-    fullName: contacts
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'contacts: Contact[];'
-      return:
-        type:
-          - 'outlook!Office.Entities#contacts~0:complex'
-        description: |-
+  `Entities` 对象是项目（电子邮件或约会）包含一个或多个服务器找到的实体时由 `getEntities` 和 `getEntitiesByType` 方法返回的实体数组的容器。可以使用代码中的这些实体为查看器提供附加上下文信息，如对项目中找到的地址的映射或打开项目中找到的电话号码的拨号程序。
 
 
-          #### <a name="examples"></a>示例
-
-          ```javascript
-          var item = Office.context.mailbox.item;
-          var contacts = item.getEntitiesByType(Office.MailboxEnums.EntityType.Contact);
-          ```
-  - uid: 'outlook!Office.Entities#emailAddresses:member'
-    summary: 获取电子邮件或约会中找到的电子邮件地址。
-    name: emailAddresses
-    fullName: emailAddresses
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'emailAddresses: string[];'
-      return:
-        type:
-          - 'string[]'
-        description: |-
+  如果项中不存在属性中指定类型的任何实体，则与该实体关联的属性为 null。 例如，如果邮件包含街道地址和电话号码，则 addresses 属性和 phoneNumbers 属性将包含信息，其他属性将为 null。
 
 
-          #### <a name="examples"></a>示例
-
-          ```javascript
-          var item = Office.context.mailbox.item;
-          var emailAddresses = item.getEntitiesByType(Office.MailboxEnums.EntityType.EmailAddress);
-          ```
-  - uid: 'outlook!Office.Entities#meetingSuggestions:member'
-    summary: 获取电子邮件中找到的会议建议。
-    name: meetingSuggestions
-    fullName: meetingSuggestions
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'meetingSuggestions: MeetingSuggestion[];'
-      return:
-        type:
-          - 'outlook!Office.Entities#meetingSuggestions~0:complex'
-        description: |-
+  若要被识别为地址，字符串必须包含至少具有街道编号、街道名称、城市、州和邮政编码等元素的子集的美国通讯地址。
 
 
-          #### <a name="examples"></a>示例
-
-          ```javascript
-          var item = Office.context.mailbox.item;
-          var meetingSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.MeetingSuggestion);
-          ```
-  - uid: 'outlook!Office.Entities#phoneNumbers:member'
-    summary: 获取电子邮件或约会中找到的电话号码。
-    name: phoneNumbers
-    fullName: phoneNumbers
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'phoneNumbers: PhoneNumber[];'
-      return:
-        type:
-          - 'outlook!Office.Entities#phoneNumbers~0:complex'
-        description: |-
+  若要被识别为电话号码，字符串必须包含北美电话号码格式。
 
 
-          #### <a name="examples"></a>示例
-
-          ```javascript
-          var item = Office.context.mailbox.item;
-          var phoneNumbers = item.getEntitiesByType(Office.MailboxEnums.EntityType.PhoneNumber);
-          ```
-  - uid: 'outlook!Office.Entities#taskSuggestions:member'
-    summary: 获取电子邮件或约会中找到的任务建议。
-    name: taskSuggestions
-    fullName: taskSuggestions
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'taskSuggestions: string[];'
-      return:
-        type:
-          - 'string[]'
-        description: |-
+  实体识别有赖于基于计算机了解大量数据的自然语言识别。实体的识别是不确定的，其成功有时取决于项中的特定上下文。
 
 
-          #### <a name="examples"></a>示例
-
-          ```javascript
-          var item = Office.context.mailbox.item;
-          var taskSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.TaskSuggestion);
-          ```
-  - uid: 'outlook!Office.Entities#urls:member'
-    summary: 获取电子邮件或约会中呈现的 Internet URL。
-    name: urls
-    fullName: urls
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'urls: string[];'
-      return:
-        type:
-          - 'string[]'
-        description: |-
+  当方法返回属性数组时 `getEntitiesByType` ，仅指定实体的属性包含数据; 其他所有属性均为 null。
+remarks: >-
+  **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
 
-          #### <a name="examples"></a>示例
-
-          ```javascript
-          var item = Office.context.mailbox.item;
-          var urls = item.getEntitiesByType(Office.MailboxEnums.EntityType.Url);
-          ```
-references:
-  - uid: 'outlook!Office.Entities#contacts~0:complex'
-    name: 'Contact[]'
-    fullName: 'Office.Contact[]'
-    spec.typeScript:
-      - uid: 'outlook!Office.Contact:interface'
-        name: Contact
-        fullName: Office.Contact
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'outlook!Office.Entities#meetingSuggestions~0:complex'
-    name: 'MeetingSuggestion[]'
-    fullName: 'Office.MeetingSuggestion[]'
-    spec.typeScript:
-      - uid: 'outlook!Office.MeetingSuggestion:interface'
-        name: MeetingSuggestion
-        fullName: Office.MeetingSuggestion
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'outlook!Office.Entities#phoneNumbers~0:complex'
-    name: 'PhoneNumber[]'
-    fullName: 'Office.PhoneNumber[]'
-    spec.typeScript:
-      - uid: 'outlook!Office.PhoneNumber:interface'
-        name: PhoneNumber
-        fullName: Office.PhoneNumber
-      - name: '[]'
-        fullName: '[]'
+  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：读取
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: addresses
+  uid: outlook!Office.Entities#addresses:member
+  package: outlook!
+  fullName: addresses
+  summary: 获取在电子邮件或约会中找到的物理地址（街道或邮寄地址）。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'addresses: string[];'
+    return:
+      type: string[]
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar addresses = item.getEntitiesByType(Office.MailboxEnums.EntityType.Address);\n```"
+- name: contacts
+  uid: outlook!Office.Entities#contacts:member
+  package: outlook!
+  fullName: contacts
+  summary: 获取电子邮件地址或约会中找到的联系人。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'contacts: Contact[];'
+    return:
+      type: <xref uid="outlook!Office.Contact:interface" />[]
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar contacts = item.getEntitiesByType(Office.MailboxEnums.EntityType.Contact);\n```"
+- name: emailAddresses
+  uid: outlook!Office.Entities#emailAddresses:member
+  package: outlook!
+  fullName: emailAddresses
+  summary: 获取电子邮件或约会中找到的电子邮件地址。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'emailAddresses: string[];'
+    return:
+      type: string[]
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar emailAddresses = item.getEntitiesByType(Office.MailboxEnums.EntityType.EmailAddress);\n```"
+- name: meetingSuggestions
+  uid: outlook!Office.Entities#meetingSuggestions:member
+  package: outlook!
+  fullName: meetingSuggestions
+  summary: 获取电子邮件中找到的会议建议。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'meetingSuggestions: MeetingSuggestion[];'
+    return:
+      type: <xref uid="outlook!Office.MeetingSuggestion:interface" />[]
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar meetingSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.MeetingSuggestion);\n```"
+- name: phoneNumbers
+  uid: outlook!Office.Entities#phoneNumbers:member
+  package: outlook!
+  fullName: phoneNumbers
+  summary: 获取电子邮件或约会中找到的电话号码。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'phoneNumbers: PhoneNumber[];'
+    return:
+      type: <xref uid="outlook!Office.PhoneNumber:interface" />[]
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar phoneNumbers = item.getEntitiesByType(Office.MailboxEnums.EntityType.PhoneNumber);\n```"
+- name: taskSuggestions
+  uid: outlook!Office.Entities#taskSuggestions:member
+  package: outlook!
+  fullName: taskSuggestions
+  summary: 获取电子邮件或约会中找到的任务建议。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'taskSuggestions: string[];'
+    return:
+      type: string[]
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar taskSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.TaskSuggestion);\n```"
+- name: urls
+  uid: outlook!Office.Entities#urls:member
+  package: outlook!
+  fullName: urls
+  summary: 获取电子邮件或约会中呈现的 Internet URL。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'urls: string[];'
+    return:
+      type: string[]
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\nvar item = Office.context.mailbox.item;\nvar urls = item.getEntitiesByType(Office.MailboxEnums.EntityType.Url);\n```"
+metadata:
+  ms.openlocfilehash: 7676703caf97d83f2ad4061acb1404a025b06277
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49340139"
