commit translated contents

--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangebordercollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangebordercollectionupdatedata.yml
@@ -1,99 +1,94 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData:interface'
-    summary: '一个用于更新 ConditionalRangeBorderCollection 对象上的数据的接口，可用于`conditionalRangeBorderCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
-    fullName: Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#bottom:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#items:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#left:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#right:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#top:member'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#bottom:member'
-    summary: |-
-      获取下边框。
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
+uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
+summary: 一个用于更新 ConditionalRangeBorderCollection 对象上的数据的接口，可用于 `conditionalRangeBorderCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: bottom
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#bottom:member
+  package: excel!
+  fullName: bottom
+  summary: >-
+    获取下边框。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: bottom
-    fullName: bottom
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'bottom?: Excel.Interfaces.ConditionalRangeBorderUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.ConditionalRangeBorderData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#items~0:complex'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#left:member'
-    summary: |-
-      获取左边框。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'left?: Excel.Interfaces.ConditionalRangeBorderUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#right:member'
-    summary: |-
-      获取右边框。
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'bottom?: Excel.Interfaces.ConditionalRangeBorderUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface" />
+- name: items
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.ConditionalRangeBorderData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeBorderData:interface" />[]
+- name: left
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#left:member
+  package: excel!
+  fullName: left
+  summary: >-
+    获取左边框。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: right
-    fullName: right
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'right?: Excel.Interfaces.ConditionalRangeBorderUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#top:member'
-    summary: |-
-      获取上边框。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'top?: Excel.Interfaces.ConditionalRangeBorderUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
-    name: Excel.Interfaces.ConditionalRangeBorderUpdateData
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.ConditionalRangeBorderData[]'
-    fullName: 'Excel.Interfaces.ConditionalRangeBorderData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData:interface'
-        name: Excel.Interfaces.ConditionalRangeBorderData
-        fullName: Excel.Interfaces.ConditionalRangeBorderData
-      - name: '[]'
-        fullName: '[]'
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'left?: Excel.Interfaces.ConditionalRangeBorderUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface" />
+- name: right
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#right:member
+  package: excel!
+  fullName: right
+  summary: >-
+    获取右边框。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'right?: Excel.Interfaces.ConditionalRangeBorderUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface" />
+- name: top
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData#top:member
+  package: excel!
+  fullName: top
+  summary: >-
+    获取上边框。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'top?: Excel.Interfaces.ConditionalRangeBorderUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface" />
+metadata:
+  ms.openlocfilehash: 87424a98f8ec9be62c154d8a2a5d5290eaf15c76
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49341154"
