--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangeborderupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangeborderupdatedata.yml
@@ -1,53 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface'
-    summary: '一个用于更新 ConditionalRangeBorder 对象上的数据的接口，可用于`conditionalRangeBorder.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ConditionalRangeBorderUpdateData
-    fullName: Excel.Interfaces.ConditionalRangeBorderUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData#color:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData#style:member'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData#color:member'
-    summary: |-
-      代表 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalRangeBorderUpdateData
+uid: excel!Excel.Interfaces.ConditionalRangeBorderUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalRangeBorderUpdateData
+summary: 一个用于更新 ConditionalRangeBorder 对象上的数据的接口，可用于 `conditionalRangeBorder.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: color
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderUpdateData#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    代表 RRGGBB 格式的边框线颜色的 HTML 颜色代码 \# (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如 "橙色" ) 。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData#style:member'
-    summary: |-
-      线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style?: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData#style~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderUpdateData#style~0:complex'
-    name: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
-    fullName: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
-    spec.typeScript:
-      - uid: 'excel!Excel.ConditionalRangeBorderLineStyle:enum'
-        name: Excel.ConditionalRangeBorderLineStyle
-        fullName: Excel.ConditionalRangeBorderLineStyle
-      - name: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"'
-        fullName: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"'
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: string;'
+    return:
+      type: string
+- name: style
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderUpdateData#style:member
+  package: excel!
+  fullName: style
+  summary: >-
+    线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style?: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot";'
+    return:
+      type: <xref uid="excel!Excel.ConditionalRangeBorderLineStyle:enum" /> | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
+metadata:
+  ms.openlocfilehash: b70beae1b9d61b1bb213e08a99614a70f5aa2a63
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49341140"
