--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.sliceritemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.sliceritemcollectionloadoptions.yml
@@ -1,91 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions:interface'
-    summary: |-
-      表示切片器上所有切片器项目对象的集合。
+### YamlMime:TSType
+name: Excel.Interfaces.SlicerItemCollectionLoadOptions
+uid: excel!Excel.Interfaces.SlicerItemCollectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.SlicerItemCollectionLoadOptions
+summary: >-
+  表示切片器上所有切片器项目对象的集合。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.SlicerItemCollectionLoadOptions
-    fullName: Excel.Interfaces.SlicerItemCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#hasData:member'
-      - 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#isSelected:member'
-      - 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#key:member'
-      - 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#name:member'
-  - uid: 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#hasData:member'
-    summary: |-
-      对于集合中的每一项：如果切片器项包含数据，则为 True。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: hasData
-    fullName: hasData
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'hasData?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#isSelected:member'
-    summary: |-
-      对于集合中的每一项：如果选择了切片器项，则为 True。 设置此值不会清除其他 SlicerItems 的选定状态。 默认情况下，如果仅选择了切片器项目，则取消选择该项目时，将会选择所有项目。
+  \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: hasData
+  uid: excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#hasData:member
+  package: excel!
+  fullName: hasData
+  summary: >-
+    对于集合中的每一项：如果切片器项包含数据，则为 True。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: isSelected
-    fullName: isSelected
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'isSelected?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#key:member'
-    summary: |-
-      对于集合中的每一项：表示切片器项的唯一值。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: key
-    fullName: key
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'key?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#name:member'
-    summary: |-
-      对于集合中的每一项：代表 UI 中显示的标题。
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'hasData?: boolean;'
+    return:
+      type: boolean
+- name: isSelected
+  uid: excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#isSelected:member
+  package: excel!
+  fullName: isSelected
+  summary: >-
+    对于集合中的每一项：如果选择了切片器项，则为 True。 设置此值不会清除其他 SlicerItems 的选定状态。 默认情况下，如果仅选择了切片器项目，则取消选择该项目时，将会选择所有项目。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'isSelected?: boolean;'
+    return:
+      type: boolean
+- name: key
+  uid: excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#key:member
+  package: excel!
+  fullName: key
+  summary: >-
+    对于集合中的每一项：表示切片器项的唯一值。
+
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'key?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.SlicerItemCollectionLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    对于集合中的每一项：代表 UI 中显示的标题。
+
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 28c4843bc0080dae02463fd941e874d05a12b62a
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49340643"
