--- a/docs/docs-ref-autogen/outlook_1_4/outlook/office.mailboxenums.responsetype.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/outlook/office.mailboxenums.responsetype.yml
@@ -1,57 +1,37 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.MailboxEnums.ResponseType:enum'
-    summary: 指定对会议邀请的响应类型。
-    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读'
-    name: Office.MailboxEnums.ResponseType
-    fullName: Office.MailboxEnums.ResponseType
-    langs:
-      - typeScript
-    type: enum
-    package: outlook!
-    children:
-      - 'outlook!Office.MailboxEnums.ResponseType.Accepted:member'
-      - 'outlook!Office.MailboxEnums.ResponseType.Declined:member'
-      - 'outlook!Office.MailboxEnums.ResponseType.None:member'
-      - 'outlook!Office.MailboxEnums.ResponseType.Organizer:member'
-      - 'outlook!Office.MailboxEnums.ResponseType.Tentative:member'
-  - uid: 'outlook!Office.MailboxEnums.ResponseType.Accepted:member'
-    summary: 参与者已接受会议请求。
-    name: Accepted
-    fullName: Accepted
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"accepted"'
-  - uid: 'outlook!Office.MailboxEnums.ResponseType.Declined:member'
-    summary: 参与者已拒绝会议请求。
-    name: Declined
-    fullName: Declined
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"declined"'
-  - uid: 'outlook!Office.MailboxEnums.ResponseType.None:member'
-    summary: 参与者尚未响应。
-    name: None
-    fullName: None
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"none"'
-  - uid: 'outlook!Office.MailboxEnums.ResponseType.Organizer:member'
-    summary: 参与者是会议组织者。
-    name: Organizer
-    fullName: Organizer
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"organizer"'
-  - uid: 'outlook!Office.MailboxEnums.ResponseType.Tentative:member'
-    summary: 参与者暂时接受会议请求。
-    name: Tentative
-    fullName: Tentative
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"tentative"'
+### YamlMime:TSEnum
+name: Office.MailboxEnums.ResponseType
+uid: outlook!Office.MailboxEnums.ResponseType:enum
+package: outlook!
+fullName: Office.MailboxEnums.ResponseType
+summary: 指定对会议邀请的响应类型。
+remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读'
+isPreview: false
+isDeprecated: false
+fields:
+- name: Accepted
+  uid: outlook!Office.MailboxEnums.ResponseType.Accepted:member
+  package: outlook!
+  summary: 参与者已接受会议请求。
+- name: Declined
+  uid: outlook!Office.MailboxEnums.ResponseType.Declined:member
+  package: outlook!
+  summary: 参与者已拒绝会议请求。
+- name: None
+  uid: outlook!Office.MailboxEnums.ResponseType.None:member
+  package: outlook!
+  summary: 参与者尚未响应。
+- name: Organizer
+  uid: outlook!Office.MailboxEnums.ResponseType.Organizer:member
+  package: outlook!
+  summary: 参与者是会议组织者。
+- name: Tentative
+  uid: outlook!Office.MailboxEnums.ResponseType.Tentative:member
+  package: outlook!
+  summary: 参与者暂时接受会议请求。
+metadata:
+  ms.openlocfilehash: 22e8000b5f80ba5a2cc07f4e67c1116884807d06
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49340503"
