--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.charterrorbarsupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.charterrorbarsupdatedata.yml
@@ -1,112 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData:interface'
-    summary: '一个用于更新 ChartErrorBars 对象上的数据的接口，可用于`chartErrorBars.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ChartErrorBarsUpdateData
-    fullName: Excel.Interfaces.ChartErrorBarsUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#endStyleCap:member'
-      - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#format:member'
-      - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#include:member'
-      - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#type:member'
-      - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#visible:member'
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#endStyleCap:member'
-    summary: |-
-      指定误差线是否具有最终样式帽。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartErrorBarsUpdateData
+uid: excel!Excel.Interfaces.ChartErrorBarsUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartErrorBarsUpdateData
+summary: 一个用于更新 ChartErrorBars 对象上的数据的接口，可用于 `chartErrorBars.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: endStyleCap
+  uid: excel!Excel.Interfaces.ChartErrorBarsUpdateData#endStyleCap:member
+  package: excel!
+  fullName: endStyleCap
+  summary: >-
+    指定误差线是否具有最终样式帽。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: endStyleCap
-    fullName: endStyleCap
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'endStyleCap?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#format:member'
-    summary: |-
-      指定误差线的格式类型。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartErrorBarsFormatUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#include:member'
-    summary: |-
-      指定包含误差线的哪些部分。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'endStyleCap?: boolean;'
+    return:
+      type: boolean
+- name: format
+  uid: excel!Excel.Interfaces.ChartErrorBarsUpdateData#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    指定误差线的格式类型。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: include
-    fullName: include
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'include?: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#include~0:complex'
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#type:member'
-    summary: |-
-      误差线标记的区域类型。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#type~0:complex'
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#visible:member'
-    summary: |-
-      指定是否显示误差线。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartErrorBarsFormatUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData:interface" />
+- name: include
+  uid: excel!Excel.Interfaces.ChartErrorBarsUpdateData#include:member
+  package: excel!
+  fullName: include
+  summary: >-
+    指定包含误差线的哪些部分。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData:interface'
-    name: Excel.Interfaces.ChartErrorBarsFormatUpdateData
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#include~0:complex'
-    name: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues"
-    fullName: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues"
-    spec.typeScript:
-      - uid: 'excel!Excel.ChartErrorBarsInclude:enum'
-        name: Excel.ChartErrorBarsInclude
-        fullName: Excel.ChartErrorBarsInclude
-      - name: ' | "Both" | "MinusValues" | "PlusValues"'
-        fullName: ' | "Both" | "MinusValues" | "PlusValues"'
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#type~0:complex'
-    name: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"
-    fullName: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"
-    spec.typeScript:
-      - uid: 'excel!Excel.ChartErrorBarsType:enum'
-        name: Excel.ChartErrorBarsType
-        fullName: Excel.ChartErrorBarsType
-      - name: ' | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"'
-        fullName: ' | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"'
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'include?: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues";'
+    return:
+      type: <xref uid="excel!Excel.ChartErrorBarsInclude:enum" /> | "Both" | "MinusValues" | "PlusValues"
+- name: type
+  uid: excel!Excel.Interfaces.ChartErrorBarsUpdateData#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    误差线标记的区域类型。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom";'
+    return:
+      type: <xref uid="excel!Excel.ChartErrorBarsType:enum" /> | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"
+- name: visible
+  uid: excel!Excel.Interfaces.ChartErrorBarsUpdateData#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定是否显示误差线。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: cbca0fda96765348fa74332e5e5ebf53703a87c1
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49341280"
