--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangefillloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangefillloadoptions.yml
@@ -1,43 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFillLoadOptions:interface'
-    summary: |-
-      代表条件 range 对象的背景。
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalRangeFillLoadOptions
+uid: excel!Excel.Interfaces.ConditionalRangeFillLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalRangeFillLoadOptions
+summary: >-
+  代表条件 range 对象的背景。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ConditionalRangeFillLoadOptions
-    fullName: Excel.Interfaces.ConditionalRangeFillLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ConditionalRangeFillLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeFillLoadOptions#color:member'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFillLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFillLoadOptions#color:member'
-    summary: |-
-      代表 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的填充颜色的 HTML 颜色代码。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: boolean;'
-      return:
-        type:
-          - boolean
+  \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ConditionalRangeFillLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: color
+  uid: excel!Excel.Interfaces.ConditionalRangeFillLoadOptions#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    表示填充颜色的 HTML 颜色代码 \# RRGGBB (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如 "橙色" ) 。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 920dec1356c2feffd040a31da858323484d60586
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49341091"
