--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangefillupdatedata.yml
@@ -1,27 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData:interface'
-    summary: '一个用于更新 ConditionalRangeFill 对象上的数据的接口，可用于`conditionalRangeFill.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ConditionalRangeFillUpdateData
-    fullName: Excel.Interfaces.ConditionalRangeFillUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData#color:member'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeFillUpdateData#color:member'
-    summary: |-
-      代表 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的填充颜色的 HTML 颜色代码。
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalRangeFillUpdateData
+uid: excel!Excel.Interfaces.ConditionalRangeFillUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalRangeFillUpdateData
+summary: 一个用于更新 ConditionalRangeFill 对象上的数据的接口，可用于 `conditionalRangeFill.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: color
+  uid: excel!Excel.Interfaces.ConditionalRangeFillUpdateData#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    表示填充颜色的 HTML 颜色代码 \# RRGGBB (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如 "橙色" ) 。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: string;'
-      return:
-        type:
-          - string
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 547036a5becada049759b5cdaf31922f63c199a7
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49341063"
