--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.worksheetcustompropertycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.worksheetcustompropertycollectionloadoptions.yml
@@ -1,59 +1,62 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions:interface'
-    summary: |-
-      包含工作表级别的自定义属性的集合。
+### YamlMime:TSType
+name: Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions
+uid: excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions
+summary: >-
+  包含工作表级别的自定义属性的集合。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions
-    fullName: Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#key:member'
-      - 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#value:member'
-  - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#key:member'
-    summary: |-
-      对于集合中的每一项：获取自定义属性的键。 自定义属性键不区分大小写。 密钥限制为255个字符 (较大的值将导致引发 "InvalidArgument" 错误。 ) 
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: key
-    fullName: key
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'key?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#value:member'
-    summary: |-
-      对于集合中的每一项：获取或设置自定义属性的值。
+  \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: key
+  uid: excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#key:member
+  package: excel!
+  fullName: key
+  summary: "对于集合中的每一项：获取自定义属性的键。 自定义属性键不区分大小写。 密钥限制为255个字符 (较大的值将导致引发 \"InvalidArgument\" 错误。 ) \n\n\\[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\\]"
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'key?: boolean;'
+    return:
+      type: boolean
+- name: value
+  uid: excel!Excel.Interfaces.WorksheetCustomPropertyCollectionLoadOptions#value:member
+  package: excel!
+  fullName: value
+  summary: >-
+    对于集合中的每一项：获取或设置自定义属性的值。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: value
-    fullName: value
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'value?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'value?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 6be8b03ffb49cf07a99e15442e3505e2e76b21aa
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49340587"
