--- a/docs/docs-ref-autogen/outlook_1_6/outlook/office.diagnostics.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/outlook/office.diagnostics.yml
@@ -1,97 +1,100 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.Diagnostics:interface'
-    summary: 将诊断信息提供给 Outlook 外接程序。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+### YamlMime:TSType
+name: Office.Diagnostics
+uid: outlook!Office.Diagnostics:interface
+package: outlook!
+fullName: Office.Diagnostics
+summary: 将诊断信息提供给 Outlook 外接程序。
+remarks: >-
+  **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
-    name: Office.Diagnostics
-    fullName: Office.Diagnostics
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.Diagnostics#hostName:member'
-      - 'outlook!Office.Diagnostics#hostVersion:member'
-      - 'outlook!Office.Diagnostics#OWAView:member'
-  - uid: 'outlook!Office.Diagnostics#hostName:member'
-    summary: |-
-      获取表示主机应用程序的名称的字符串。
 
-      一个可为下列值之一的字符串：`Outlook`<!-- -->, `OutlookWebApp`<!-- -->, `OutlookIOS`<!-- -->，或者`OutlookAndroid`<!-- -->.
+  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: hostName
+  uid: outlook!Office.Diagnostics#hostName:member
+  package: outlook!
+  fullName: hostName
+  summary: >-
+    获取表示主机应用程序的名称的字符串。
 
-      **注意**： `Outlook` 针对桌面客户端（即 Windows 和 Mac）上的 Outlook 返回值。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
-    name: hostName
-    fullName: hostName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'hostName: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.Diagnostics#hostVersion:member'
-    summary: |-
-      获取表示主机应用程序或 Exchange 服务器的版本的字符串（例如，"15.0.468.0"）。
+    一个可为下列值之一的字符串： `Outlook`<!-- -->, `OutlookWebApp`<!-- -->, `OutlookIOS`<!-- -->，或者 `OutlookAndroid`<!-- -->.
 
-      如果邮件外接程序在桌面或移动客户端上的 Outlook 中运行，则该 `hostVersion` 属性返回主机应用程序（Outlook）的版本。 在 Outlook 网页版中，该属性返回的是 Exchange 服务器的版本。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
-    name: hostVersion
-    fullName: hostVersion
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'hostVersion: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.Diagnostics#OWAView:member'
-    summary: |-
-      获取表示 web 上的 Outlook 的当前视图的字符串。
+    **注意**： `Outlook` 针对桌面客户端上的 Outlook 返回的值 (即 Windows 和 Mac) 。
+  remarks: >-
+    **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
-      返回的字符串可以是下列值之一：`OneColumn`<!-- -->, `TwoColumns`<!-- -->，或者`ThreeColumns`<!-- -->.
 
-      如果主机应用程序不是 web 上的 Outlook，则访问此属性将导致未定义。
+    **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'hostName: string;'
+    return:
+      type: string
+- name: hostVersion
+  uid: outlook!Office.Diagnostics#hostVersion:member
+  package: outlook!
+  fullName: hostVersion
+  summary: >-
+    获取一个 string 类型的值，该值代表主机应用程序或 Exchange Server 的版本 (例如，"15.0.468.0" ) 。
 
-      Web 上的 Outlook 具有三个视图，分别对应于屏幕的宽度和窗口，以及可以显示的列数：
 
-      - `OneColumn`<!-- --> 在屏幕较窄时显示。 Web 上的 Outlook 在智能手机的整个屏幕上使用此单列布局。
+    如果邮件外接程序在桌面或移动客户端上的 Outlook 中运行，则该 `hostVersion` 属性返回主机应用程序（Outlook）的版本。 在 Outlook 网页版中，该属性返回的是 Exchange 服务器的版本。
+  remarks: >-
+    **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
-      - `TwoColumns`<!-- --> 在屏幕较宽时显示。 Outlook 网页版在大多数平板电脑上使用此视图。
 
-      - `ThreeColumns`<!-- --> 在屏幕为宽屏时显示。 例如，web 上的 Outlook 在桌面计算机上的全屏窗口中使用此视图。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+    **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'hostVersion: string;'
+    return:
+      type: string
+- name: OWAView
+  uid: outlook!Office.Diagnostics#OWAView:member
+  package: outlook!
+  fullName: OWAView
+  summary: >-
+    获取表示 web 上的 Outlook 的当前视图的字符串。
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
-    name: OWAView
-    fullName: OWAView
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'OWAView: MailboxEnums.OWAView | "OneColumn" | "TwoColumns" | "ThreeColumns";'
-      return:
-        type:
-          - 'outlook!Office.Diagnostics#OWAView~0:complex'
-references:
-  - uid: 'outlook!Office.Diagnostics#OWAView~0:complex'
-    name: MailboxEnums.OWAView | "OneColumn" | "TwoColumns" | "ThreeColumns"
-    fullName: Office.MailboxEnums.OWAView | "OneColumn" | "TwoColumns" | "ThreeColumns"
-    spec.typeScript:
-      - uid: 'outlook!Office.MailboxEnums.OWAView:enum'
-        name: MailboxEnums.OWAView
-        fullName: Office.MailboxEnums.OWAView
-      - name: ' | "OneColumn" | "TwoColumns" | "ThreeColumns"'
-        fullName: ' | "OneColumn" | "TwoColumns" | "ThreeColumns"'
+
+    返回的字符串可以是下列值之一： `OneColumn`<!-- -->, `TwoColumns`<!-- -->，或者 `ThreeColumns`<!-- -->.
+
+
+    如果主机应用程序不是 web 上的 Outlook，则访问此属性将导致未定义。
+
+
+    Web 上的 Outlook 具有三个视图，分别对应于屏幕的宽度和窗口，以及可以显示的列数：
+
+
+    - `OneColumn`<!-- --> 在屏幕较窄时显示。 Web 上的 Outlook 在智能手机的整个屏幕上使用此单列布局。
+
+
+    - `TwoColumns`<!-- --> 在屏幕较宽时显示。 Outlook 网页版在大多数平板电脑上使用此视图。
+
+
+    - `ThreeColumns`<!-- --> 在屏幕为宽屏时显示。 例如，web 上的 Outlook 在桌面计算机上的全屏窗口中使用此视图。
+  remarks: >-
+    **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
+
+
+    **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'OWAView: MailboxEnums.OWAView | "OneColumn" | "TwoColumns" | "ThreeColumns";'
+    return:
+      type: <xref uid="outlook!Office.MailboxEnums.OWAView:enum" /> | "OneColumn" | "TwoColumns" | "ThreeColumns"
+metadata:
+  ms.openlocfilehash: be4f0fe658e8bc98549f47df9c6266bbab345424
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49340440"
